:bug: fix: overflow

--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -2,6 +2,7 @@
   min-height: 100vh;
   margin: 0 auto;
   max-width: 1920px;
+  overflow: hidden;
 }
 
 #section-about {
